using Microsoft.AspNetCore.Identity;

namespace Firmeza.Core.Entities;

public class ApplicationUser : IdentityUser
{
    // You can add additional properties for your user here
    // public string FirstName { get; set; }
    // public string LastName { get; set; }
}